# Yalta

./: CMakeLists.txt  README.md
appveyor/: appveyor.yml  build.bat
scripts/: ctags_wrapper.bat  yalta.bat
src/: main.cpp  parser.cpp  parser.h  resource.rc  tags_writer.cpp  tags_writer.h  token.h  token_iterator.cpp  token_iterator.h
